test (DatabaseCleanup) : 엔티티 애너테이션이 있는 클래스 네임 그대로 데이터베이스가 되기 때문에 이름을 가져오는 메서드 변경
#109